@@ -11,9 +11,9 @@ Name=JGoodies Looks
 shortname=looks
 name=jgoodies-looks
 spec.version=2.4
-impl.version=2.4.0b3
-version.name=2.4 Beta3
-dist.version=2_4_0-BETA3-20100908
+impl.version=2.4.0b4
+version.name=2.4 Beta4
+dist.version=2_4_0-BETA4-20100916
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
