@@ -48,7 +48,7 @@ import com.jgoodies.looks.Options;
  * For the latter see also issue #4337647 in Sun's bug database.
  *
  * @author Karsten Lentzsch
- * @version $Revision: 1.12 $
+ * @version $Revision: 1.13 $
  */
 final class PlasticFieldCaret extends DefaultCaret implements UIResource {
 
@@ -102,7 +102,8 @@ final class PlasticFieldCaret extends DefaultCaret implements UIResource {
         super.focusLost(e);
         if (!e.isTemporary()) {
             isKeyboardFocusEvent = true;
-            if (Boolean.TRUE.equals(getComponent().getClientProperty(Options.SET_CARET_TO_START_ON_FOCUS_LOST_CLIENT_KEY))) {
+            if (   getComponent() != null
+                && Boolean.TRUE.equals(getComponent().getClientProperty(Options.SET_CARET_TO_START_ON_FOCUS_LOST_CLIENT_KEY))) {
                 setDot(0);
             }
         }
@@ -124,8 +125,9 @@ final class PlasticFieldCaret extends DefaultCaret implements UIResource {
         super.mouseReleased(e);
         if (e.isPopupTrigger()) {
             isKeyboardFocusEvent = false;
-            if ((getComponent() != null) && getComponent().isEnabled()
-                    && getComponent().isRequestFocusEnabled()) {
+            if (   getComponent() != null 
+                && getComponent().isEnabled()
+                && getComponent().isRequestFocusEnabled()) {
                 getComponent().requestFocus();
             }
         }
